fix wrap columns

--- a/src/views/AddCategoryDialog/styles.scss
+++ b/src/views/AddCategoryDialog/styles.scss
@@ -16,6 +16,9 @@ div.wrapper {
   display: inline-block;
   width: 50%;
   vertical-align: top;
+  @media (max-width: 750px) {
+    width: 100%;
+  }
 }
 .categories {
   margin-top: 20px;
@@ -39,21 +42,15 @@ div.wrapper {
   vertical-align: top;
   box-sizing: border-box;
   padding-right: 20px;
-}
-
-@media (max-width: 750px) {
-  div.wrapper form {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: stretch;
+  @media (max-width: 750px) {
+    width: 100%;
   }
 }
 
 @media (max-width: 750px) {
-  .categoriesHolder,
-  .prevCategoriesHolder {
-    width: 100%;
+  .holder {
+    display: flex;
+    flex-direction: column;
   }
 }
 
